Fix for resize and remove buttons not being clickable

--- a/client/src/scss/components/dashboardEdit/_dashboardEdit.scss
+++ b/client/src/scss/components/dashboardEdit/_dashboardEdit.scss
@@ -62,6 +62,7 @@
         bottom: 0;
         right: 0;
         cursor: se-resize;
+        z-index: 100;
       }
 
       .react-grid-item > .react-resizable-handle::after {
