--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -10,6 +10,10 @@ $color-grey-transparent-50: rgba(112, 112, 112, 0.5);
 $color-grey-hover: rgb(86, 86, 86);
 $color-black: rgb(61, 61, 61);
 $color-black-transparent-10: rgba(0, 0, 0, 0.1);
+$color-blue: rgb(49, 85, 164);
+$color-blue-transparent: rgba(49, 85, 164, 0.6);
+$color-orange: rgb(255, 134, 94);
+$color-orange-transparent: rgba(255, 134, 94, 0.6);
 $color-red: rgb(207, 31, 62);
 $color-red-transparent: rgba(207, 31, 62, 0.6);
 
