--- a/client/src/scss/components/dashboard/_dashboard.scss
+++ b/client/src/scss/components/dashboard/_dashboard.scss
@@ -1,6 +1,6 @@
 .companyNEdit {
   width: auto !important;
-  color: $color-red;
+  color: $color-blue;
   font-size: 2em !important;
   font-weight: 700;
   padding: 25px 0;
