--- a/client/src/scss/components/dashboard/_dashboardCard.scss
+++ b/client/src/scss/components/dashboard/_dashboardCard.scss
@@ -51,7 +51,7 @@
       cursor: pointer;
       transition: 0.3s ease all;
       &:hover {
-        color: $color-red;
+        color: $color-blue;
       }
     }
     :nth-child(3) {
