--- a/client/src/scss/base/_customCheckmark.scss
+++ b/client/src/scss/base/_customCheckmark.scss
@@ -39,7 +39,7 @@
     top: 2.5px;
     width: 7px;
     height: 16px;
-    border: solid $color-red;
+    border: solid $color-blue;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
