--- a/client/src/scss/base/_inputs.scss
+++ b/client/src/scss/base/_inputs.scss
@@ -5,7 +5,7 @@ input[type="email"] {
   background: transparent;
   border: 0;
   outline: 0;
-  border-bottom: 2px solid $color-red-transparent;
+  border-bottom: 2px solid $color-blue-transparent;
   font-size: inherit;
   &::placeholder {
     color: $color-dark-white;
@@ -22,5 +22,5 @@ input[type="email"] {
 .invalid {
   margin-top: 2px;
   font-size: 0.8em;
-  color: $color-red;
+  color: $color-blue;
 }
