--- a/client/src/scss/components/bars/_titleBarDropdown.scss
+++ b/client/src/scss/components/bars/_titleBarDropdown.scss
@@ -8,7 +8,7 @@
     @include border-radius(50%);
     width: 40px;
     height: 40px;
-    background-color: $color-red;
+    background-color: $color-blue;
     display: flex;
     justify-content: center;
     align-items: center;
