--- a/client/src/scss/components/dashboard/_dashboardGrid.scss
+++ b/client/src/scss/components/dashboard/_dashboardGrid.scss
@@ -31,7 +31,7 @@
         color: $color-grey;
       }
       > div > div > div > h2 {
-        color: $color-red;
+        color: $color-blue;
       }
       > div > div button {
         opacity: 0;
