--- a/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
+++ b/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
@@ -7,7 +7,7 @@
     color: $color-dark-white;
     cursor: pointer;
     &:hover {
-      color: $color-red;
+      color: $color-blue;
     }
   }
   .dashboardName {
@@ -26,7 +26,7 @@
       border-bottom: 2px solid transparent;
     }
     input:focus {
-      border-bottom: 2px solid $color-red-transparent;
+      border-bottom: 2px solid $color-blue-transparent;
     }
     i {
       position: absolute;
@@ -51,7 +51,7 @@
       border-bottom: 2px solid transparent;
     }
     input:focus {
-      border-bottom: 2px solid $color-red-transparent;
+      border-bottom: 2px solid $color-blue-transparent;
     }
     i {
       position: absolute;
