--- a/client/src/scss/components/dashboardEdit/_widgetSelecter.scss
+++ b/client/src/scss/components/dashboardEdit/_widgetSelecter.scss
@@ -14,7 +14,7 @@
 
       > div {
         border-width: 1px;
-        border-color: $color-red !important;
+        border-color: $color-orange !important;
       }
       .css-kk5gw9 {
         box-shadow: none !important;
