Change login background image

--- a/client/src/scss/components/user/_login.scss
+++ b/client/src/scss/components/user/_login.scss
@@ -9,7 +9,7 @@
     z-index: 2;
     position: relative;
     grid-area: image;
-    background-image: url(img/lamecoLoginImg.jpg);
+    background-image: url(img/genericLoginImg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
