Convert main font to Quicksand

--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $color-red: rgb(207, 31, 62);
 $color-red-transparent: rgba(207, 31, 62, 0.6);
 
 // Fonts
-$font: "Montserrat", sans-serif;
+$font: "Quicksand", sans-serif;
 
 // Shadows
 // Use in combination with shadow mixin
