--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 // Import main font - Quicksand
-@import url("https://fonts.googleapis.com/css?family=Quicksand:500,700");
+@import url("https://fonts.googleapis.com/css?family=Quicksand");
 // Import material icons
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 // Import weather icons
