Enforce round corners on all content blocks

--- a/client/src/scss/components/gridItems/_widgets.scss
+++ b/client/src/scss/components/gridItems/_widgets.scss
@@ -4,6 +4,7 @@
   background-color: $color-white;
   transition: all 200ms ease;
   transition-property: left, top;
+  overflow: hidden;
 }
 
 .textWidget {
